<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CurriculumDetailsActivity">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:background="#D4D4D4"
        >
        <ImageButton
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="27dp"
            android:src="@drawable/back_29"
            android:layout_marginTop="10dp"
            android:onClick="backCurriculum"/>
        <TextView android:layout_width="134dp"
            android:layout_height="27dp"
            android:layout_centerInParent="true"
            android:text="IT互联网"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="27dp"
            android:src="@drawable/google_search_32px"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>



    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0">
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="编程语言"
                android:textColor="#000000"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:text="PHP视频教程"
            android:gravity="center"
            android:background="#D6D7D7"
            android:layout_marginTop="20dp"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:text="C语言基础"
            android:gravity="center"
            android:background="#D6D7D7"
            android:layout_marginTop="20dp"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:text="c++入门"
            android:gravity="center"
            android:background="#D6D7D7"
            android:layout_marginTop="20dp"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:text="Java入门到精通"
            android:gravity="center"
            android:background="#D6D7D7"
            android:layout_marginTop="20dp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/refresh_24px"
            android:layout_gravity="center"/>
    </LinearLayout>


    <View android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#D4D4D4"
        android:layout_marginTop="10dp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_37"
                android:onClick="home" />
            <ImageButton
                android:id="@+id/book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/book_38"
                android:onClick="curriculum"
                android:layout_marginLeft="60dp"/>
            <ImageButton
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/message_32px"
                android:layout_marginLeft="60dp"
                android:onClick="checkInMyMessage" />
        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course"
                android:layout_marginLeft="60dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/my_message" />
        </TableRow>
    </TableLayout>
</LinearLayout>
