<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurriculumActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:background="#D4D4D4"
        >
        <ImageButton
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="27dp"
            android:src="@drawable/back_29"
            android:layout_marginTop="10dp"
            android:onClick="backEducationHome"/>
        <TextView android:layout_width="134dp"
            android:layout_height="27dp"
            android:layout_centerInParent="true"
            android:text="全部课程"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="27dp"
            android:src="@drawable/google_search_32px"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:shrinkColumns="0,1,2"
        android:stretchColumns="0,1,2">
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#D6D7D7">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IT互联网 >>"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">编程语言"
                android:onClick="courseDetails"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">移动开发"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">产品设计"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">Web开发"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">操作系统"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">数据库"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">产品运营"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">硬件开发"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">网络技术"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">软件测试"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">运维"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#D6D7D7">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="更多分类 >>"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">生活百科"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">亲子育儿"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">中小学"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">文学艺术"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">基础科学"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">哲学历史"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">农林医药"/>
            <Button android:gravity="center"
                android:padding="20dp"
                android:text=">生物工程"/>
        </TableRow>
    </TableLayout>


    <View android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#D4D4D4"
        android:layout_marginTop="10dp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_37"
                android:onClick="checkInHome" />
            <ImageButton
                android:id="@+id/book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/book_38"
                android:onClick="checkInCurriculum"
                android:layout_marginLeft="60dp"/>
            <ImageButton
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/message_32px"
                android:layout_marginLeft="60dp"
                android:onClick="checkInMyMessage" />
        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course"
                android:layout_marginLeft="60dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/my_message" />
        </TableRow>
    </TableLayout>
</LinearLayout>
